@@ -1,3 +1,9 @@
+2012-08-20 Srecko Morovic <srecko.morovic@cern.ch>
+
+	* tag V00-02-13
+	* catching all kinds of exception in postEntry(iChoke)
+	* implement output (stream) rates
+
 2012-07-20 Srecko Morovic <srecko.morovic@cern.ch>
 
 	* tag V00-02-12
